fix(auth/components): align prompt text in auth forms

--- a/src/app/pages/auth/components/login-form/login-form.component.scss
+++ b/src/app/pages/auth/components/login-form/login-form.component.scss
@@ -25,4 +25,5 @@ $account-icon-size: 2rem;
 
 .signup-link {
   align-self: center;
+  text-align: center;
 }
