--- a/src/app/pages/auth/components/signup-form/signup-form.component.scss
+++ b/src/app/pages/auth/components/signup-form/signup-form.component.scss
@@ -25,4 +25,5 @@ $account-icon-size: 2rem;
 
 .login-link {
   align-self: center;
+  text-align: center;
 }
